🔐 Corrigir trigger do workflow GitHub Actions - Autenticação
- Removido filtro 'paths' restritivo do workflow CI/CD
- Garantir que todos os pushs na branch main acionem o pipeline
- Workflow agora executa para qualquer alteração, não só src/pom.xml
- Manter triggers para PR e workflow_dispatch intactos

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>